# fastk

./: .gitignore  2_04.txt  3_08.txt  Cargo.toml  bio-yeast.dot  core.txt  coree.txt  group.py  random.dot  standardized_random.txt  test_specifics.txt
real_results/results/: final_runs.csv  parameters.csv  pinning_strategies.csv  speedup.csv
real_results/yes/: arm.csv  arm_speedup.csv
real_results/yes/results/: final_runs.csv  parameters.csv  pinning_strategies.csv
results/: final_runs.csv  parameters.csv  pinning_strategies.csv  speedup.csv
src/: lib.rs  main.rs  pinning_arrays.rs
