[package]
name = "fastk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
rayon = "1.10.0"
ittapi = "0.4.0"
crossbeam = "0.8.4"
rand = "0.9.2"
parking_lot = "0.12"
core_affinity = "0.6.0"
concurrent-queue = "2"
libc = "0.2.180"

[profile.profiling]
inherits = "release"
debug = true
